# promptdex

./: CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  pyproject.toml
promptdex/: main.py  schemas.py  seed_library.py
promptdex/static/: app.js  index.html  styles.css
tests/: test_api.py
