[project]
name = "promptdex"
version = "0.1.0"
description = "A local-first Pokedex of AI prompts."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.111.0",
    "pydantic>=2.7.0",
    "sqlalchemy>=2.0.30",
    "uvicorn[standard]>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/AlvaroManso/promptdex"
Repository = "https://github.com/AlvaroManso/promptdex"
Issues = "https://github.com/AlvaroManso/promptdex/issues"

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"promptdex/seed_library.py" = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
